--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,20 +2,21 @@
   "name": "MINTCALC - The All-in-One Calculator",
   "short_name": "MINTCALC",
   "description": "A comprehensive, all-in-one calculator featuring basic & scientific calculations, unit converters, health tools, and financial calculators, with a modern neumorphic theme.",
-  "start_url": "/",
+  "start_url": "/New-calculator-/",
+  "scope": "/New-calculator-/",
   "display": "standalone",
   "background_color": "#f0fff4",
   "theme_color": "#2e7d32",
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/icons/icon-192.png",
+      "src": "/New-calculator-/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icons/icon-512.png",
+      "src": "/New-calculator-/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
